@@ -1,5 +1,10 @@
 2007-12-21  mefyl  <mefyl@lrde.epita.fr>
 
+	Declare XFAIL tests.
+	* tests-local.mk: Declare failing 1.x tests as XFAIL.
+
+2007-12-21  mefyl  <mefyl@lrde.epita.fr>
+
 	Define TESTS_DIR.
 	* tests-local.mk: Kernel 2 must pass 2.x and 1.x tests.
 
